--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
+        <img src="assets/img/profile-img.png" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Abdelrhman Hatem</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://twitter.com/GeeKTech01" class="twitter"><i class="bx bxl-twitter"></i></a>
@@ -103,8 +103,8 @@
                           <div class="col-lg-6">
                               <ul>
                                   <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 28 May 2001</li>
-                                  <li> <a href="http://gtcorp.tech"
-                                  <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> gtcorp.tech</li> </a> </li>
+                                  <li> <a href="http://Geektech.software"
+                                  <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> GeeKTech.software</li> </a> </li>
                                   <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> 0106 004 6469</li> </a>
                                   <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Cairo, Egypt</li>
                               </ul>
@@ -113,8 +113,8 @@
                               <ul>
                                   <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 20</li>
                                   <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Bachelor of Engineering </li>
-                                  <li> <a href="mailto:A.hatem@gtcorp.tech"
-                                  <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> A.hatem@gtcorp.tech</li> </a> </li>
+                                  <li> <a href="mailto:A.hatem@GeeKTech.software"
+                                  <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> A.hatem@GeeKTech.software</li> </a> </li>
                                   <!---<li><i class="icofont-rounded-right"></i> <strong>Freelance:</strong> Available</li> -->
                               </ul>
                           </div>
