--- a/index.html
+++ b/index.html
@@ -116,8 +116,9 @@
                             </div>
                             <div class="col-lg-6">
                                 <ul>
-                                    <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 20</li>
-                                    <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Bachelor of Engineering </li>
+                                    <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 21</li>
+                                    <li><i class="icofont-rounded-right"></i> <strong>University:</strong> Egyptian Chinese University </li>
+                                    <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Bachelor of Software Engineering </li>
                                     <li> <a href="mailto:A.hatem@GeeKTech.software" <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> A.hatem@GeeKTech.software</li> </a> </li>
                                     <!---<li><i class="icofont-rounded-right"></i> <strong>Freelance:</strong> Available</li> -->
                                 </ul>
