--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                         <h3 class="resume-title">Sumary</h3>
                         <div class="resume-item pb-0">
                             <h4>Abdelrhman Hatem</h4>
-                            <p><em>Innovative Business developer drived by the belief in whichever idea i'm working on.</em></p>
+                            <p><em>Innovative Project Manager drived by the belief in whichever idea i'm working on.</em></p>
                             <ul>
                                 <!-- <li>Portland par 127,Orlando, FL</li> -->
                                 <li>01060046469</li>
