--- a/index.html
+++ b/index.html
@@ -318,16 +318,17 @@
                             </ul>
                         </div>
                         <div class="resume-item">
-                            <h4>CTO & Co-founder at B2gether</h4>
-                            <h5>DEC 2019 - Present</h5>
+                            <h4>Consultant at MINT By EG Bank</h4>
+                            <h5>FEB 2021 - Present</h5>
                             <p><em>Cairo, Egypt</em></p>
                             <ul>
                                 <li>
-                                    Managing current on going projects.
+                                    Worked with the Cards, SMEs, Products & Digital channels departments.
+
                                 </li>
-                                <li>Overseeing business development operations.</li>
-                                <li>Made deals with values that exceeded 150K EGP.</li>
-                                <li>Supervising marketing team.</li>
+                                <li>Provided Consultancy to tech based products for the bank.</li>
+                                <li>Provided Technology Consultancy for Start-ups in Accelerator Program.</li>
+                                <li>Hosted Financial Literacy sessions for ECU Students.</li>
                             </ul>
                         </div>
 
