--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                             <div class="col-lg-6">
                                 <ul>
                                     <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 28 May 2001</li>
-                                    <li> <a href="http://Geektech.software" <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> GeeKTech.software</li> </a> </li>
+                                    <li> <a href="https://Geektech.software" <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> GeeKTech.software</li> </a> </li>
                                     <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> 0106 004 6469</li>
                                     </a>
                                     <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Cairo, Egypt</li>
