--- a/index.html
+++ b/index.html
@@ -503,13 +503,13 @@
 
         <!-- End Services Section -->
         <!-- ======= Testimonials Section ======= -->
-        <!--
+     <!--   
     <section id="testimonials " class="testimonials section-bg ">
         <div class="container ">
 
-            <div class="section-title ">
-                <h2>Testimonials</h2>
-                <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+            <div class="section-title">
+                <h2>Client Testimonials</h2>
+                <p>Here are some testimonials from my satisfied clients, previous partners and leaders. I take pride in delivering exceptional results and exceeding expectations. Read what they have to say about their experience with myself.</p>
             </div>
 
             <div class="owl-carousel testimonials-carousel ">
@@ -572,8 +572,12 @@
             </div>
 
         </div>
-    </section> -->
+    </section>
+    
+-->
         <!-- End Testimonials Section -->
+
+
         <!-- ======= Contact Section ======= -->
         <section id="contact" class="contact">
             <div class="container ">
