--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                             <h4>Bachelor of Software Engineering </h4>
                             <h5>2019 - 2024</h5>
                             <p><em>Egyptian Chienese University, Cairo, EG</em></p>
-                            <p>Currently in my second year with GPA 3.53</p>
+                            <p>Currently in my Fourth year with GPA 3.53</p>
                         </div>
                        
                     </div>
